--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <strong>Javascript</strong>
             </li>
             <li>
-              <div class="progress percent30"><span>30%</span></div>
+              <div class="progress percent30"><span>20%</span></div>
               <strong>React js</strong>
             </li>
             <li>
@@ -210,10 +210,10 @@
 
       <div class="row button-section">
         <div class="col-twelve">
-          <a href="#contact" title="Hire Me" class="button stroke smoothscroll"
+          <a href="https://api.whatsapp.com/send?phone=5562995494200" title="Hire Me" class="button stroke smoothscroll"
             >Contato</a
           >
-          <a href="./images/curriculo_ingredisilva.pdf" title="Download CV" class="button button-primary"
+          <a href="./src/curriculo_IngrediSilva.pdf" title="Download CV" class="button button-primary"
             >Download CV</a
           >
         </div>
