Adição do link do Freeman o Netflify

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
               <div class="link-box">
                 <a href="https://github.com/ingredisilva/freeman">Código</a>
-                <a href="#" class="popup-modal-dismiss">Fechar</a>
+                <a href="https://amazing-pare-2732b8.netlify.app" class="popup-modal-dismiss">Ver ao Vivo</a>
               </div>
             </div> 
             <!-- /modal-05 -->
