Correção de Links

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
               <div class="link-box">
                 <a href="https://github.com/ingredisilva/hulu-webpage-clone">Ver Código</a>
-                <a href="https://zen-kepler-3dd475.netlify.app" class="popup-modal-dismiss">Ver ao-vivo</a>
+                <a href="https://zen-kepler-3dd475.netlify.app/" class="popup-modal-dismiss">Ver ao-vivo</a>
               </div>
             </div>
             <!-- /modal-01 -->
