--- a/index.html
+++ b/index.html
@@ -346,11 +346,12 @@
 
               <div class="link-box">
                 <a href="https://github.com/ingredisilva/hulu-webpage-clone">Ver Código</a>
-                <a href="https://zen-kepler-3dd475.netlify.app/" class="popup-modal-dismiss">Ver ao-vivo</a>
+                <a href="https://zen-kepler-3dd475.netlify.app/">Ver ao-vivo</a>
+             <!--   <a href="" class="popup-modal-dismiss">Fechar</a>-->
               </div>
             </div>
             <!-- /modal-01 -->
-
+s
             <div id="modal-02" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/mockuparpengo.png" alt="" />
@@ -430,7 +431,7 @@
 
               <div class="link-box">
                 <a href="https://github.com/ingredisilva/freeman">Código</a>
-                <a href="https://amazing-pare-2732b8.netlify.app" class="popup-modal-dismiss">Ver ao Vivo</a>
+                <a href="https://amazing-pare-2732b8.netlify.app" >Ver ao Vivo</a>
               </div>
             </div> 
             <!-- /modal-05 -->
@@ -451,7 +452,7 @@
 
               <div class="link-box">
                 <a href="https://github.com/ingredisilva/freeman">Código</a>
-                <a href="#" class="popup-modal-dismiss">Fechar</a>
+                <a href="#" Fechar</a>
               </div>
             </div> 
             <!-- /modal-06 -->
@@ -464,6 +465,11 @@
         <!-- /twelve -->
       </div>
       <!-- /portfolio-content -->
+
+
+      
+
+
     </section>
     <!-- /portfolio -->
 
@@ -508,8 +514,12 @@
       <div id="loader"></div>
     </div>
 
-    <!-- Java Script
-   ================================================== -->
+
+
+      
+
+    <!-- Java Script -->
+  
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
